Added some new client work
Added new Dukes, TBSL, and Witchcraft radio spot.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
     </header>
   </article>
 
+  <article class="project-featured">
+    <a href="/work/this-bar-saves-lives-makes-other-bars-jelly.html"><img src="/assets/images/tbsl-home-feature-background.jpg" alt="This Bar Saves Lives / Makes other Bars Jelly" /></a>
+    <header>
+      <h1>This Bar Saves Lives</h1>
+      <h2>Makes other Bars Jelly</h2>
+      <p><span>See<br /> More</span></p>
+    </header>
+  </article>
+
   <article class="project-featured project-featured-reverse">
     <a href="/work/witchcraft-website-development.html"><img src="/assets/images/wc2-no-hops.jpg" alt="ColorWheel Brand Development" /></a>
     <header>
@@ -130,7 +139,16 @@
       <h2>Luxury Travel With A Soul</h2>
       <p><span>See<br /> More</span></p>
     </header>
-  </article> 
+  </article>
+
+  <article class="project-featured">
+    <a href="/work/dukes-meats-website-design.html"><img src="/assets/images/dukes-home-feature-background.jpg" alt="Dukes / History you can taste" /></a>
+    <header>
+      <h1>Dukes</h1>
+      <h2>History you can taste</h2>
+      <p><span>See<br /> More</span></p>
+    </header>
+  </article>
 
   <article class="project-featured project-featured-reverse">
     <a href="/work/dfi-sexy-hair-sells.html"><img src="/assets/images/dfi-homepage.jpg" alt="Grit advertising dfi" /></a>
