--- a/work/index.html
+++ b/work/index.html
@@ -222,6 +222,16 @@
     </article>
 
     <article class="project-grid-item">
+      <p><a href="/work/this-bar-saves-lives-makes-other-bars-jelly.html"><img src="/assets/images/tbsl-make-jelly-600x600.jpg" alt="This Bar Saves Lives / Makes other Bars Jelly" /></a></p>
+      <div class="project-grid-header-container">
+        <header>
+          <h1>This Bar Saves Lives</h1>
+          <h2>Makes other Bars Jelly</h2>
+        </header>
+      </div>
+    </article>
+
+    <article class="project-grid-item">
       <p><a href="/work/dixie-elixirs-packaging-update-2016.html"><img src="/assets/images/600x600-homepage-mints.jpg" alt="Dixie Elixirs / packaging Redesign" /></a></p>
       <div class="project-grid-header-container">
         <header>
