--- a/work/this-bar-saves-lives-makes-other-bars-jelly.html
+++ b/work/this-bar-saves-lives-makes-other-bars-jelly.html
@@ -6,7 +6,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="Headquartered in Denver, Grit is an agency of creative thinkers delivering the business of ideas for ads, campaigns, social media, and more." />
 
-<title>Denver Packaging Design</title>
+<title>Made with Grit</title>
+
+<!-- ****** faviconit.com favicons ****** -->
+<link rel="shortcut icon" href="/favicon.ico">
+<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
+<link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
+<link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+<link rel="apple-touch-icon" href="/favicon-57.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/favicon-60.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
+<meta name="msapplication-TileColor" content="#FFFFFF">
+<meta name="msapplication-TileImage" content="/favicon-144.png">
+<meta name="msapplication-config" content="/browserconfig.xml">
+<!-- ****** faviconit.com favicons ****** -->
 
 <script>document.getElementsByTagName('html')[0].className += ' all-loading';</script>
 <link href="/assets/css/made-with-grit.css" rel="stylesheet" type="text/css" />
@@ -30,9 +53,9 @@
     <a class="logo" href="/"><svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 27.5 18" enable-background="new 0 0 27.5 18" xml:space="preserve"><path d="M6.4 9.1H3.8c-0.2 0-0.3 0.1-0.3 0.3v1c0 0.2 0.1 0.3 0.3 0.3h1.1v4c0 1-0.6 1.6-1.5 1.6 -0.9 0-1.5-0.6-1.5-1.6V3.3c0-0.9 0.6-1.5 1.5-1.5 1.1 0 1.5 0.8 1.5 1.5v2.4c0 0.2 0.1 0.3 0.3 0.3h1.1c0.2 0 0.3-0.1 0.3-0.3V3.6C6.5 1.4 5.3 0 3.3 0 1.4 0 0 1.5 0 3.6v10.8C0 16.5 1.2 18 3 18c1.1 0 1.9-0.5 2.3-1.3l0 0 0.4 0.9c0 0.1 0.1 0.2 0.3 0.2h0.3c0.2 0 0.3-0.1 0.3-0.3V9.4C6.7 9.2 6.5 9.1 6.4 9.1zM15.1 16.6c-0.3-0.1-0.3-0.4-0.3-0.7v-4.2c0-0.7-0.2-2-1.5-2.4l-0.1 0 0.1 0c1-0.3 1.5-1.1 1.5-2.5V3.4c0-2-1-3.1-2.9-3.1H8.7c-0.2 0-0.3 0.1-0.3 0.3v16.9c0 0.2 0.1 0.3 0.3 0.3H10c0.2 0 0.3-0.1 0.3-0.3V10h1.5c0.8 0 1.2 0.5 1.2 1.5V16c0 1.6 0.6 1.9 1.7 1.9H15c0.2 0 0.3-0.1 0.3-0.3v-0.7C15.3 16.7 15.2 16.6 15.1 16.6zM10.3 2h1.5c0.7 0 1.1 0.4 1.1 1.3v3.7c0 0.9-0.5 1.5-1.2 1.5h-1.4V2zM18.2 0.3h-1.3c-0.2 0-0.3 0.1-0.3 0.3v16.9c0 0.2 0.1 0.3 0.3 0.3h1.3c0.2 0 0.3-0.1 0.3-0.3V0.6C18.5 0.4 18.4 0.3 18.2 0.3zM27.2 15.8H26c-0.2 0-0.3 0.1-0.3 0.3v1.3c0 0.2 0.1 0.3 0.3 0.3h1.2c0.2 0 0.3-0.1 0.3-0.3v-1.3C27.5 16 27.4 15.8 27.2 15.8zM26 1.7V0.6c0-0.2-0.1-0.3-0.3-0.3h-5.8c-0.2 0-0.3 0.1-0.3 0.3v1.2c0 0.2 0.1 0.3 0.3 0.3h2.1v15.4c0 0.2 0.1 0.3 0.3 0.3h1.2c0.2 0 0.3-0.1 0.3-0.3V2h2C25.8 2 26 1.9 26 1.7z"></path></svg></a>
   </header>
   <div>
-    <h1 class="short-rule">Dukes Meats</h1>
-    <h2>Website Design and Development</h2>
-    <p> Duke’s philosophy is all about quality, not quantity—and that jerky should be two things: honest and delicious. All ingredients are all-natural without added nitrates, preservatives, artificial ingredients, colorings, and MSG. Grit has helped Duke’s with brand development and positioning, product photoshoots, print and digital ad concepts, brand videos, and e-commerce website design and development.</p>
+    <h1 class="short-rule">This Bar Saves Lives</h1>
+    <h2>Makes other Bars Jelly</h2>
+    <p>This Bar Saves Lives does exactly what you think it does. It saves lives. For every bar bought, This Bar Saves Lives sends life-saving and preventative packets of food to a child in need where it’s needed most. And most importantly TBSL tastes delicious. Grit developed brand positioning and guidelines, an ecommerce website design, point of sale, product videos, social media, and experiential tactical concepts.</p>
   </div>
 </div>
 
@@ -41,18 +64,12 @@
 <main>
 
 <div class="video-duct-tape">
-  <iframe src="//player.vimeo.com/video/191233381?color=000000&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <iframe src="//player.vimeo.com/video/191226055?color=000000&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
 <div class="video-duct-tape">
-  <iframe src="//player.vimeo.com/video/191233298?color=000000&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <iframe src="//player.vimeo.com/video/191233730?color=000000&title=0&byline=0&portrait=0" width="640" height="309" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
-
-<img src="/assets/images/dukes-01.jpg" alt="Dukes / Website Design and Development" />
-<img src="/assets/images/dukes-02.jpg" alt="Dukes / Website Design and Development" />
-<img src="/assets/images/dukes-03.jpg" alt="Dukes / Website Design and Development" />
-<img src="/assets/images/dukes-04.jpg" alt="Dukes / Website Design and Development" />
-<img src="/assets/images/dukes-05.jpg" alt="Dukes / Website Design and Development" />
 
 </main>
 
