Updated copy on four IMT details
Updated copy on four IMT detail pages.

--- a/work/infinite-monkey-clings.html
+++ b/work/infinite-monkey-clings.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">The Infinite Monkey Theorem</h1>
     <h2>Cooler Cling</h2>
-    <p>The Infinite Monkey Theorem represents a counter culture in winemaking. No vineyard. No pretense. Opened in 2008 in Denver, Colorado, The Infinite Monkey Theorem is an urban winery that buys the best grapes and makes ridiculously good wine. Grit was thrilled to work with the crew at IMT to develop there first point of sale displays along with a campaign to help propel there amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
+    <p>The Infinite Monkey Theorem represents a counter culture in winemaking. No vineyard. No pretense. Grit was thrilled to work with the crew at IMT to develop their first point of sale displays along with a campaign to help propel their amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
   </div>
 </div>
 
