--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <main>
 
   <article class="project-featured">
-    <a href="/work/infinite-monkey-go-big.html"><img src="/assets/images/IMT3.jpg" alt="Grit design IMT" /></a>
+    <a href="/work/infinite-monkey-go-big.html"><img src="/assets/images/IMT3.jpg" alt="Grit design The Infinite Monkey Theorem" /></a>
     <header>
       <h1>The Infinite Monkey Theorem</h1>
       <h2>How To Go Big Without Selling Out</h2>
@@ -142,9 +142,9 @@
   </article>
 
   <article class="project-featured">
-    <a href="/work/dukes-meats-website-design.html"><img src="/assets/images/dukes-home-feature-background.jpg" alt="Dukes / History you can taste" /></a>
+    <a href="/work/dukes-meats-website-design.html"><img src="/assets/images/dukes-home-feature-background.jpg" alt="Duke’s / History you can taste" /></a>
     <header>
-      <h1>Dukes</h1>
+      <h1>Duke’s</h1>
       <h2>History you can taste</h2>
       <p><span>See<br /> More</span></p>
     </header>
