--- a/work/dfi-social-media.html
+++ b/work/dfi-social-media.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">D:fi</h1>
     <h2>Social Media</h2>
-            <p>d:fi makes hair products for the people who live every night to the fullest. d:fi’s products aren’t just made to turn heads, they’re made to be touched. Over the past 3 years, Grit has helped launch d:fi’s rebrand and supported them by managing their social pages and creating new, up to date sales tactics. </p>
+    <p>d:fi makes hair products for people who live every night to the fullest. d:fi’s products aren’t just made to turn heads, they’re made to be touched. Over the past three years, Grit has helped launch d:fi’s rebrand and support them by managing their social pages and creating new, up-to-date sales tactics.</p>
   </div>
 </div>
 
