--- a/work/dixie-elixirs-limited-edition-packaging.html
+++ b/work/dixie-elixirs-limited-edition-packaging.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">Dixie Elixirs</h1>
     <h2>Limited Edition Packaging</h2>
-    <p>In October 2013, Dixie brought Grit in to help take the brand to the next level. In preparation for adult-use sales, Dixie recognized that there was an opportunity to reach beyond the core cannabis connoisseur. They wanted to reach out and become the most trusted name in infused products. We overhauled everything from brand promise and strategy to packaging and total brand aesthetic. All of this culminated on January 1, 2014 when Dixie unveiled new packaging, a new website, new ads and an undeniable desire to be the first iconic infused product brand.</p>
+    <p>In October 2013, Dixie brought on Grit to help take the brand to the next level. In preparation for adult-use sales, Dixie became recognized that there was an opportunity to reach beyond the core cannabis connoisseur. They wanted to reach out and become the most trusted name in infused products. We overhauled everything from brand promise and strategy yo packaging and total brand aesthetic. All of this culminated on January 1, 2014, when Dixie unveiled new packaging, a new website, new ads and an undeniable desire to be first iconic infused product brand.</p>
   </div>
 </div>
 
