--- a/work/glo-minerals-serve-and-protect.html
+++ b/work/glo-minerals-serve-and-protect.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">Glo Minerals</h1>
     <h2>Products To Serve And Protect</h2>
-    <p>Glo is an award-winning cosmetics company. They use only pharmaceutical-grade ingredients and use advanced formulations that work systematically to support skin health and treat skin concerns. Glo has hundreds of SKUs including cleansers, toners, moisturizers, serums and specialty treatment formulations. Over the past few years Grit has helped keep the brands look and feel up to date with product photography, advertising and high end beauty photography.</p>
+    <p>GLO is an award-winning cosmetics company. They use only pharmaceutical-grade ingredients and advanced formulations that work systemically to support skin health and treat skin concerns. Glo has hundreds of SKUs including cleansers, toners, moisturizers, serums, and specialty treatment formulations. Over the past few years, Grit has helped keep brand’s look and feel up to date with product photography, advertising, and high-end beauty photography.</p>
   </div>
 </div>
 
