--- a/work/index.html
+++ b/work/index.html
@@ -62,7 +62,7 @@
     </article>
 
     <article class="project-grid-item">
-      <p><a href="/work/infinite-monkey-go-big.html"><img src="/assets/images/imt-1.jpg" alt="Infinite Monkey Theorem / Infinite Monkey Theorem " /></a></p>
+      <p><a href="/work/infinite-monkey-go-big.html"><img src="/assets/images/imt-1.jpg" alt="Infinite Monkey Theorem / The Infinite Monkey Theorem" /></a></p>
       <div class="project-grid-header-container">
         <header>
           <h1>Infinite Monkey Theorem</h1>
@@ -132,7 +132,7 @@
     </article>
 
     <article class="project-grid-item">
-      <p><a href="/work/infinite-monkey-brochure-design.html"><img src="/assets/images/imt-2.jpg" alt="Infinite Monkey Theorem / Brochure" /></a></p>
+      <p><a href="/work/infinite-monkey-brochure-design.html"><img src="/assets/images/imt-2.jpg" alt="The Infinite Monkey Theorem / Brochure" /></a></p>
       <div class="project-grid-header-container">
         <header>
           <h1>Infinite Monkey Theorem</h1>
@@ -152,7 +152,7 @@
     </article>
 
     <article class="project-grid-item hide">
-      <p><a href="/work/infinite-monkey-peach-bellini.html"><img src="/assets/images/imt-3.jpg" alt="Infinite Monkey Theorem / Packaging Design" /></a></p>
+      <p><a href="/work/infinite-monkey-peach-bellini.html"><img src="/assets/images/imt-3.jpg" alt="The Infinite Monkey Theorem / Packaging Design" /></a></p>
       <div class="project-grid-header-container">
         <header>
           <h1>Infinite Monkey Theorem</h1>
@@ -202,7 +202,7 @@
     </article>
 
     <article class="project-grid-item">
-      <p><a href="/work/infinite-monkey-clings.html"><img src="/assets/images/imt-4.jpg" alt="Infinite Monkey Theorem / Point of Sale" /></a></p>
+      <p><a href="/work/infinite-monkey-clings.html"><img src="/assets/images/imt-4.jpg" alt="The Infinite Monkey Theorem / Point of Sale" /></a></p>
       <div class="project-grid-header-container">
         <header>
           <h1>Infinite Monkey Theorem</h1>
@@ -252,7 +252,7 @@
     </article>
 
     <article class="project-grid-item">
-      <p><a href="/work/infinite-monkey-go-big.html"><img src="/assets/images/imt-5.jpg" alt="Infinite Monkey Theorem / Go Big Without Selling Out" /></a></p>
+      <p><a href="/work/infinite-monkey-go-big.html"><img src="/assets/images/imt-5.jpg" alt="The Infinite Monkey Theorem / Go Big Without Selling Out" /></a></p>
       <div class="project-grid-header-container">
         <header>
           <h1>Infinite Monkey Theorem</h1>
@@ -392,7 +392,7 @@
     </article>
 
     <article class="project-grid-item">
-      <p><a href="/work/infinite-monkey-sales-incentives.html"><img src="/assets/images/imt-6.jpg" alt="Infinite Monkey Theorem / Sales Incentives" /></a></p>
+      <p><a href="/work/infinite-monkey-sales-incentives.html"><img src="/assets/images/imt-6.jpg" alt="The Infinite Monkey Theorem / Sales Incentives" /></a></p>
       <div class="project-grid-header-container">
         <header>
           <h1>Infinite Monkey Theorem</h1>
