--- a/work/infinite-monkey-brochure-design.html
+++ b/work/infinite-monkey-brochure-design.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">The Infinite Monkey</h1>
     <h2>Brochure Design</h2>
-    <p>The Infinite Monkey Theorem represents a counter culture in winemaking. No vineyard. No pretense. Grit was thrilled to work with the crew at IMT to develop their first point of sale displays along with a campaign to help propel their amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
+    <p>The Infinite Monkey Theorem represents a counterculture in winemaking. No vineyard. No pretense. Grit was thrilled to work with the crew at Infinite Monkey Theorem to develop their first point-of-sale displays along with a campaign to help propel their amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
   </div>
 </div>
 
@@ -63,11 +63,11 @@
 
 <main>
 
-<img src="/assets/images/grit-site-imt-newspaper-1.jpg" alt="Grit site imt newspaper 1" />
-<img src="/assets/images/grit-site-imt-newspaper-2.jpg" alt="Grit site imt newspaper 2" />
-<img src="/assets/images/grit-site-imt-newspaper-3.jpg" alt="Grit site imt newspaper 3" />
-<img src="/assets/images/grit-site-imt-newspaper-4.jpg" alt="Grit site imt newspaper 4" />
-<img src="/assets/images/grit-site-imt-newspaper-5.jpg" alt="Grit site imt newspaper 5" />
+<img src="/assets/images/grit-site-imt-newspaper-1.jpg" alt="Grit site The Infinite Monkey Theorem newspaper 1" />
+<img src="/assets/images/grit-site-imt-newspaper-2.jpg" alt="Grit site The Infinite Monkey Theorem newspaper 2" />
+<img src="/assets/images/grit-site-imt-newspaper-3.jpg" alt="Grit site The Infinite Monkey Theorem newspaper 3" />
+<img src="/assets/images/grit-site-imt-newspaper-4.jpg" alt="Grit site The Infinite Monkey Theorem newspaper 4" />
+<img src="/assets/images/grit-site-imt-newspaper-5.jpg" alt="Grit site The Infinite Monkey Theorem newspaper 5" />
 
 </main>
 
