--- a/work/infinite-monkey-clings.html
+++ b/work/infinite-monkey-clings.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">The Infinite Monkey Theorem</h1>
     <h2>Cooler Cling</h2>
-    <p>The Infinite Monkey Theorem represents a counter culture in winemaking. No vineyard. No pretense. Grit was thrilled to work with the crew at IMT to develop their first point of sale displays along with a campaign to help propel their amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
+    <p>The Infinite Monkey Theorem represents a counterculture in winemaking. No vineyard. No pretense. Grit was thrilled to work with the crew at Infinite Monkey Theorem to develop their first point-of-sale displays along with a campaign to help propel their amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
   </div>
 </div>
 
@@ -63,9 +63,9 @@
 
 <main>
 
-<img src="/assets/images/IMT-WindowCling-1.png" alt="Grit site imt pointofsale 2" />
-<img src="/assets/images/IMT-WindowCling-2.png" alt="Grit site imt pointofsale" />
-<img src="/assets/images/IMT-WindowCling-3.png" alt="Grit site imt pointofsale" />
+<img src="/assets/images/IMT-WindowCling-1.png" alt="Grit site The Infinite Monkey Theorem pointofsale 2" />
+<img src="/assets/images/IMT-WindowCling-2.png" alt="Grit site The Infinite Monkey Theorem pointofsale" />
+<img src="/assets/images/IMT-WindowCling-3.png" alt="Grit site The Infinite Monkey Theorem pointofsale" />
 
 </main>
 
