--- a/work/infinite-monkey-go-big.html
+++ b/work/infinite-monkey-go-big.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">The Infinite Monkey Theorem</h1>
     <h2>How To Go Big Without Selling Out</h2>
-    <p>The Infinite Monkey Theorem represents a counter culture in winemaking. No vineyard. No pretense. Grit was thrilled to work with the crew at IMT to develop their first point of sale displays along with a campaign to help propel their amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
+    <p>The Infinite Monkey Theorem represents a counter culture in winemaking. No vineyard. No pretense. Grit was thrilled to work with the crew at The Infinite Monkey Theorem to develop their first point of sale displays along with a campaign to help propel their amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
   </div>
 </div>
 
@@ -64,16 +64,16 @@
 <main>
 
 <img src="/assets/images/grit-advertising-dixie2-1.jpg" alt="Grit advertising dixie2" />
-<img src="/assets/images/grit-site-imt-pointofsale.jpg" alt="Grit site imt pointofsale" />
-<img src="/assets/images/grit-site-imt-pointofsale-2.jpg" alt="Grit site imt pointofsale 2" />
-<img src="/assets/images/grit-site-imt-coolercard.jpg" alt="Grit site imt coolercard" />
-<img src="/assets/images/grit-site-imt-newspaper-1.jpg" alt="Grit site imt newspaper 1" />
-<img src="/assets/images/grit-site-imt-newspaper-2.jpg" alt="Grit site imt newspaper 2" />
-<img src="/assets/images/grit-site-imt-newspaper-3.jpg" alt="Grit site imt newspaper 3" />
-<img src="/assets/images/grit-site-imt-newspaper-4.jpg" alt="Grit site imt newspaper 4" />
-<img src="/assets/images/grit-site-imt-newspaper-5.jpg" alt="Grit site imt newspaper 5" />
-<img src="/assets/images/imt-boxes.png" alt="Grit site imt promoboxes" />
-<img src="/assets/images/grit-site-imt-neckgator.jpg" alt="Grit site imt neckgator" />
+<img src="/assets/images/grit-site-imt-pointofsale.jpg" alt="Grit site The Infinite Monkey Theorem pointofsale" />
+<img src="/assets/images/grit-site-imt-pointofsale-2.jpg" alt="Grit site The Infinite Monkey Theorem pointofsale 2" />
+<img src="/assets/images/grit-site-imt-coolercard.jpg" alt="Grit site The Infinite Monkey Theorem coolercard" />
+<img src="/assets/images/grit-site-imt-newspaper-1.jpg" alt="Grit site The Infinite Monkey Theorem newspaper 1" />
+<img src="/assets/images/grit-site-imt-newspaper-2.jpg" alt="Grit site The Infinite Monkey Theorem newspaper 2" />
+<img src="/assets/images/grit-site-imt-newspaper-3.jpg" alt="Grit site The Infinite Monkey Theorem newspaper 3" />
+<img src="/assets/images/grit-site-imt-newspaper-4.jpg" alt="Grit site The Infinite Monkey Theorem newspaper 4" />
+<img src="/assets/images/grit-site-imt-newspaper-5.jpg" alt="Grit site The Infinite Monkey Theorem newspaper 5" />
+<img src="/assets/images/imt-boxes.png" alt="Grit site The Infinite Monkey Theorem promoboxes" />
+<img src="/assets/images/grit-site-imt-neckgator.jpg" alt="Grit site The Infinite Monkey Theorem neckgator" />
 
 </main>
 
