--- a/work/infinite-monkey-sales-incentives.html
+++ b/work/infinite-monkey-sales-incentives.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">The Infinite Monkey Theorem</h1>
     <h2>Sales Incentives</h2>
-    <p>The Infinite Monkey Theorem represents a counter culture in winemaking. No vineyard. No pretense. Grit was thrilled to work with the crew at IMT to develop their first point of sale displays along with a campaign to help propel their amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
+    <p>The Infinite Monkey Theorem represents a counter culture in winemaking. No vineyard. No pretense. Grit was thrilled to work with the crew at The Infinite Monkey Theorem to develop their first point of sale displays along with a campaign to help propel their amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
   </div>
 </div>
 
@@ -63,8 +63,8 @@
 
 <main>
 
-<img src="/assets/images/IMT_Sales.png" alt="Grit advertising IMT Sales Tools" />
-<img src="/assets/images/IMT_Sales2.png" alt="Grit advertising IMT Sales Tools" />
+<img src="/assets/images/IMT_Sales.png" alt="Grit advertising The Infinite Monkey Theorem Sales Tools" />
+<img src="/assets/images/IMT_Sales2.png" alt="Grit advertising The Infinite Monkey Theorem Sales Tools" />
 
 </main>
 
