--- a/work/leafs-by-snoop.html
+++ b/work/leafs-by-snoop.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">Leafs By Snoop</h1>
     <h2>Product Launch</h2>
-    <p>Leafs by Snoop is a line of cannabis products by artist and entrepreneur, Snoop Dogg. Snoop asked Grit to help with packaging development and to launch the brand. Grit supported Leafs By Snoop with packaging development, public relations, photoshoots, point of sale, sales tools, digital, print, and radio ads. The launch event was covered in a wide range of publications from Rolling Stone to Forbes.</p>
+    <p>Leafs by Snoop is a line of cannabis products by artist and entrepreneurs, Snoop Dogg. Snoop asked Grit to help with packaging development and launching the brand. Grit supported Leafs by Snoop with packaging development, public relations, photo shoots, point-of-sale, sales tools, digital, print, and radio ads. The launch event was covered in a wide range of publications from Rolling Stones to Forbes.</p>
   </div>
 </div>
 
