--- a/work/mockery-brewing-social-media.html
+++ b/work/mockery-brewing-social-media.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">Mockery Brewing</h1>
     <h2>Social Media</h2>
-    <p>The German Purity Law states that beer should be made with barley, hops, water, and nothing else. But that felt limiting to Mockery, so they set out to make a mockery of the law by creating intriguing recipes they could proudly feel good pouring. Grit is the AOR for the brand and has developed the brand mission, values, and logo refinement. Grit has helped them with packaging, sales tools, social media, video assets, event promos, and campaigns.</p>
+    <p>The German Purity Law states that beer should be made with barley, hops, water, and nothing else. But that felt limiting to Mockery, so they set out to make a mockery of the law by creating intriguing recipes they could feel proud to pour. Grit is the agency of record for the brand and has developed the brand mission, values, and logo refinement. Grit has helped them with packaging, sales tool, social media, video assets, event promos, and campaigns.</p>
   </div>
 </div>
 
