--- a/work/therabis-print.html
+++ b/work/therabis-print.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">Therabis</h1>
     <h2>Therabis Printed Assets</h2>
-    <p>Therabis is a hemp-infused pet care line with a wide range of products to help relieve anxiety, itching, and joint pain in pets. Grit developed sales tools, print and digital assets and trade show assets to educate customers.</p>
+    <p>Therabis is a hemp-infused pet care line with a wide range of products to help relieve anxiety, itching, and joint pain in pets. Grit developed sales tools, print and digital assets, and trade show assets to educate consumers.</p>
   </div>
 </div>
 
