--- a/work/dukes-meats-website-design.html
+++ b/work/dukes-meats-website-design.html
@@ -30,9 +30,9 @@
     <a class="logo" href="/"><svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" viewBox="0 0 27.5 18" enable-background="new 0 0 27.5 18" xml:space="preserve"><path d="M6.4 9.1H3.8c-0.2 0-0.3 0.1-0.3 0.3v1c0 0.2 0.1 0.3 0.3 0.3h1.1v4c0 1-0.6 1.6-1.5 1.6 -0.9 0-1.5-0.6-1.5-1.6V3.3c0-0.9 0.6-1.5 1.5-1.5 1.1 0 1.5 0.8 1.5 1.5v2.4c0 0.2 0.1 0.3 0.3 0.3h1.1c0.2 0 0.3-0.1 0.3-0.3V3.6C6.5 1.4 5.3 0 3.3 0 1.4 0 0 1.5 0 3.6v10.8C0 16.5 1.2 18 3 18c1.1 0 1.9-0.5 2.3-1.3l0 0 0.4 0.9c0 0.1 0.1 0.2 0.3 0.2h0.3c0.2 0 0.3-0.1 0.3-0.3V9.4C6.7 9.2 6.5 9.1 6.4 9.1zM15.1 16.6c-0.3-0.1-0.3-0.4-0.3-0.7v-4.2c0-0.7-0.2-2-1.5-2.4l-0.1 0 0.1 0c1-0.3 1.5-1.1 1.5-2.5V3.4c0-2-1-3.1-2.9-3.1H8.7c-0.2 0-0.3 0.1-0.3 0.3v16.9c0 0.2 0.1 0.3 0.3 0.3H10c0.2 0 0.3-0.1 0.3-0.3V10h1.5c0.8 0 1.2 0.5 1.2 1.5V16c0 1.6 0.6 1.9 1.7 1.9H15c0.2 0 0.3-0.1 0.3-0.3v-0.7C15.3 16.7 15.2 16.6 15.1 16.6zM10.3 2h1.5c0.7 0 1.1 0.4 1.1 1.3v3.7c0 0.9-0.5 1.5-1.2 1.5h-1.4V2zM18.2 0.3h-1.3c-0.2 0-0.3 0.1-0.3 0.3v16.9c0 0.2 0.1 0.3 0.3 0.3h1.3c0.2 0 0.3-0.1 0.3-0.3V0.6C18.5 0.4 18.4 0.3 18.2 0.3zM27.2 15.8H26c-0.2 0-0.3 0.1-0.3 0.3v1.3c0 0.2 0.1 0.3 0.3 0.3h1.2c0.2 0 0.3-0.1 0.3-0.3v-1.3C27.5 16 27.4 15.8 27.2 15.8zM26 1.7V0.6c0-0.2-0.1-0.3-0.3-0.3h-5.8c-0.2 0-0.3 0.1-0.3 0.3v1.2c0 0.2 0.1 0.3 0.3 0.3h2.1v15.4c0 0.2 0.1 0.3 0.3 0.3h1.2c0.2 0 0.3-0.1 0.3-0.3V2h2C25.8 2 26 1.9 26 1.7z"></path></svg></a>
   </header>
   <div>
-    <h1 class="short-rule">Dukes Meats</h1>
+    <h1 class="short-rule">Duke’s Meats</h1>
     <h2>Website Design and Development</h2>
-    <p> Duke’s philosophy is all about quality, not quantity—and that jerky should be two things: honest and delicious. All ingredients are all-natural without added nitrates, preservatives, artificial ingredients, colorings, and MSG. Grit has helped Duke’s with brand development and positioning, product photoshoots, print and digital ad concepts, brand videos, and e-commerce website design and development.</p>
+    <p>Duke’s philosophy is all about quality, not quantity - and that jerky should be two things: honest and delicious. All ingredients are all-natural without added nitrates, preservative, artificial ingredients, colorings, or MSG. Grit has helped Duke’s with brand development and positioning, product photo shoots, print and digital concepts, brand videos, and e-commerce website design and development.</p>
   </div>
 </div>
 
@@ -48,11 +48,11 @@
   <iframe src="//player.vimeo.com/video/191233298?color=000000&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
-<img src="/assets/images/dukes-01.jpg" alt="Dukes / Website Design and Development" />
-<img src="/assets/images/dukes-02.jpg" alt="Dukes / Website Design and Development" />
-<img src="/assets/images/dukes-03.jpg" alt="Dukes / Website Design and Development" />
-<img src="/assets/images/dukes-04.jpg" alt="Dukes / Website Design and Development" />
-<img src="/assets/images/dukes-05.jpg" alt="Dukes / Website Design and Development" />
+<img src="/assets/images/dukes-01.jpg" alt="Duke’s / Website Design and Development" />
+<img src="/assets/images/dukes-02.jpg" alt="Duke’s / Website Design and Development" />
+<img src="/assets/images/dukes-03.jpg" alt="Duke’s / Website Design and Development" />
+<img src="/assets/images/dukes-04.jpg" alt="Duke’s / Website Design and Development" />
+<img src="/assets/images/dukes-05.jpg" alt="Duke’s / Website Design and Development" />
 
 </main>
 
