--- a/work/infinite-monkey-point of sale.html
+++ b/work/infinite-monkey-point of sale.html
@@ -55,7 +55,7 @@
   <div>
     <h1 class="short-rule">The Infinite Monkey Theorem</h1>
     <h2>Point of Sale</h2>
-    <p>The Infinite Monkey Theorem represents a counter culture in winemaking. No vineyard. No pretense. Opened in 2008 in Denver, Colorado, The Infinite Monkey Theorem is an urban winery that buys the best grapes and makes ridiculously good wine. Grit was thrilled to work with the crew at IMT to develop there first point of sale displays along with a campaign to help propel there amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
+    <p>The Infinite Monkey Theorem represents a counter culture in winemaking. No vineyard. No pretense. Opened in 2008 in Denver, Colorado, The Infinite Monkey Theorem is an urban winery that buys the best grapes and makes ridiculously good wine. Grit was thrilled to work with the crew at The Infinite Monkey Theorem to develop there first point of sale displays along with a campaign to help propel there amazingly delicious and portable wine in a can. The wooden display boxes were breakthrough disruptive in the category and helped open new doors in new states.</p>
   </div>
 </div>
 
@@ -63,11 +63,11 @@
 
 <main>
 
-<img src="/assets/images/grit-site-imt-pointofsale-2.jpg" alt="Grit site imt pointofsale 2" />
-<img src="/assets/images/grit-site-imt-pointofsale.jpg" alt="Grit site imt pointofsale" />
-<img src="/assets/images/IMT-WindowCling-1.png" alt="Grit site imt pointofsale 2" />
-<img src="/assets/images/IMT-WindowCling-2.png" alt="Grit site imt pointofsale" />
-<img src="/assets/images/IMT-WindowCling-3.png" alt="Grit site imt pointofsale" />
+<img src="/assets/images/grit-site-imt-pointofsale-2.jpg" alt="Grit site The Infinite Monkey Theorem pointofsale 2" />
+<img src="/assets/images/grit-site-imt-pointofsale.jpg" alt="Grit site The Infinite Monkey Theorem pointofsale" />
+<img src="/assets/images/IMT-WindowCling-1.png" alt="Grit site The Infinite Monkey Theorem pointofsale 2" />
+<img src="/assets/images/IMT-WindowCling-2.png" alt="Grit site The Infinite Monkey Theorem pointofsale" />
+<img src="/assets/images/IMT-WindowCling-3.png" alt="Grit site The Infinite Monkey Theorem pointofsale" />
 
 </main>
 
